# quakece

./: .gitignore  CMakeLists.txt  Notes.md  README.md  build.sh  dockerfile  gmon.out  utils.cpp  utils.hpp
.github/workflows/: build.yml
Headers/: engine.hpp  gui.hpp
engine/: Board.cpp  Board.hpp  BoardUtil.cpp  TranspositionTable.cpp  TranspositionTable.hpp  eval.cpp  eval.hpp  move.cpp  move.hpp  search.cpp  search.hpp
engine/movegen/: movegen.cpp  movegen.hpp
gui/: BoardDisplay.cpp
src/: FixedStack.hpp  main.cpp
src/crashes/: report1.txt  zobrist_debug.txt
src/drivers/: Computer.cpp  Computer.hpp  TextDriver.cpp  TextDriver.hpp  guiDriver.cpp  guiDriver.hpp
src/gui/: BoardDisplay.cpp  BoardDisplay.hpp
src/tests/: perft.cpp  perft.hpp  perft_suite.txt
